Fixed Prettier formatting issues and css styling

--- a/src/dashboard/app.scss
+++ b/src/dashboard/app.scss
@@ -94,7 +94,8 @@
     .new_page {
       .new_page_main {
         .new_page_content {
-          box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 4px 0px,
+          box-shadow:
+            rgba(255, 255, 255, 0.1) 0px 1px 4px 0px,
             rgba(255, 255, 255, 0.1) 0px 1px 3px 0px;
         }
       }
