--- a/src/dashboard/Components/Sidebar/Sidebar.scss
+++ b/src/dashboard/Components/Sidebar/Sidebar.scss
@@ -15,9 +15,9 @@ $text_color: #3d3c42;
     text-align: center;
 
     .text_none {
-      text-decoration: none;
-      color: $icon_color;
+      color: red !important;
     }
+    
   }
 
   .links {
