--- a/src/dashboard/Components/Sidebar/Sidebar.scss
+++ b/src/dashboard/Components/Sidebar/Sidebar.scss
@@ -5,6 +5,7 @@ $text_color: #3d3c42;
   border-right: 1px solid #eee;
   height: 100vh;
   margin-left: 10px;
+  padding-top: 60px;
 
   .logo {
     cursor: pointer;
